<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="retweets_caps">RETWEETS</string>
    <string name="favorites_caps">FAVORITES</string>
    <string name="welcome_to_twitter">Welcome to Twitter</string>
    <string name="see_what_s_happening_in_the_world_right_now">See what\'s happening in the world right now</string>
    <string name="following_caps">FOLLOWING</string>
    <string name="followers_caps">FOLLOWERS</string>

</resources>