<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.twitterclient.DetailedTweetActivity"
    android:background="@color/twitterWhite"
    >


    <RelativeLayout
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/basic_bottom_border"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTweet"
            android:text="@string/tweet"
            android:src="@drawable/twitter_icon"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />

        <ImageButton
            style="@style/ActionBarImageButton"
            android:id="@+id/imageButton4"
            android:src="@drawable/ic_keyboard_arrow_left_black_48dp"
            android:layout_alignParentLeft="true"
            android:onClick="closeDetailedTweetActivity"
            />

        <ImageButton
            style="@style/ActionBarImageButton"
            android:id="@+id/btnNewTweet"
            android:src="@drawable/newmessage"
            android:layout_alignParentRight="true"
            />


        <ImageButton
            style="@style/ActionBarImageButton"
            android:id="@+id/btnSearch"
            android:src="@drawable/search"
            android:layout_alignTop="@id/btnNewTweet"
            android:layout_alignBottom="@id/btnNewTweet"
            android:layout_toLeftOf="@id/btnNewTweet"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:padding="16dp"
        android:background="@drawable/basic_bottom_border"
        android:id="@+id/rvTweetContent"
        >

        <ImageView
            style="@style/UserThumbnail"
            android:id="@+id/ivProfileImage"
            android:src="@drawable/ic_launcher"
            />

        <TextView
            style="@style/NameStyle"
            android:text="Hearsay Social"
            android:layout_toRightOf="@id/ivProfileImage"
            android:layout_alignTop="@id/ivProfileImage"
            android:layout_alignParentRight="true"
            android:id="@+id/tvName"
            />

        <TextView
            style="@style/SmallGrayText"
            android:text="hearsaysocial"
            android:layout_toRightOf="@id/ivProfileImage"
            android:layout_below="@id/tvName"
            android:layout_alignParentRight="true"
            android:id="@+id/tvUserName"
            />

        <TextView
            style="@style/LargeBlackText"
            android:text="Some long tweet about a lot of stuff that goes on and on for lots of characters"
            android:layout_below="@id/ivProfileImage"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/tvBody"
            />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/ivMediaImage"
            android:layout_below="@id/tvBody"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rvTweetContent"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/basic_bottom_border"
        android:id="@+id/rvDateRow"
        android:padding="16dp"
        >
        <TextView
            android:id="@+id/tvDatePosted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="8/18/16, 12:55 PM"
            android:textColor="@color/twitterLightGray"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rvDateRow"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/basic_bottom_border"
        android:id="@+id/rvActionCounts"
        android:padding="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7"
            android:textColor="@color/twitterBlack"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:id="@+id/tvRetweetCount"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retweets_caps"
            android:textColor="@color/twitterLightGray"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/tvRetweetCount"
            android:layout_marginLeft="5dp"
            android:id="@+id/tvRetweets"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7"
            android:textColor="@color/twitterBlack"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tvRetweets"
            android:id="@+id/tvFavoriteCount"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites_caps"
            android:textColor="@color/twitterLightGray"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/tvFavoriteCount"
            android:layout_marginLeft="5dp"
            android:id="@+id/tvFavorites"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/rvActionCounts"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/basic_bottom_border"
        android:id="@+id/rvActionButtons"
        android:padding="16dp"
        android:gravity="center"
        >

        <ImageButton
            style="@style/DetailedViewImageButtons"
            android:id="@+id/btnReply"
            android:src="@drawable/ic_reply_black_48dp"
            android:layout_marginRight="40dp"
            />
        <ImageButton
            style="@style/DetailedViewImageButtons"
            android:id="@+id/btnRetweet"
            android:layout_alignTop="@id/btnReply"
            android:layout_alignBottom="@id/btnReply"
            android:src="@drawable/ic_repeat_black_48dp"

            android:layout_toRightOf="@id/btnReply"
            android:layout_marginRight="40dp"
            />
        <ImageButton
            style="@style/DetailedViewImageButtons"
            android:layout_alignTop="@id/btnReply"
            android:layout_alignBottom="@id/btnReply"
            android:src="@drawable/ic_favorite_black_48dp"
            android:id="@+id/btnFavorite"
            android:layout_toRightOf="@id/btnRetweet"
            android:layout_marginRight="40dp"
            />
        <ImageButton
            style="@style/DetailedViewImageButtons"
            android:layout_alignTop="@id/btnReply"
            android:layout_alignBottom="@id/btnReply"
            android:src="@drawable/ic_message_black_48dp"
            android:id="@+id/btnMessage"
            android:layout_toRightOf="@id/btnFavorite"
            />
    </RelativeLayout>




</RelativeLayout>
